--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-openai
-typer
-langchain
-faiss-cpu
-beautifulsoup4
-requests
-serpapi
-python-dotenv
+langgraph>=0.0.19
+anthropic>=0.8.0
+pydantic>=2.0.0
+python-dotenv>=1.0.0 
