Deleted unnecessary files

--- a/mcp_agent.secrets.yaml
+++ b/mcp_agent.secrets.yaml
@@ -5,7 +5,7 @@ anthropic:
   api_key: 
 
 openai:
-  api_key: 
+  api_key:
 
 ollama:
   model: llama3.2
@@ -14,12 +14,4 @@ mcp:
   servers:
     everything-search:
       env:
-        EVERYTHING_SDK_PATH: "C:/Users/Geith/Documents/GitHub/Fixr/Everything64.dll"
-    cli-mcp-server:
-      env:
-        ALLOWED_DIR: "C:/"
-        ALLOWED_COMMANDS: "all"
-        ALLOWED_FLAGS: "all"
-        MAX_COMMAND_LENGTH: "1024"
-        COMMAND_TIMEOUT: "30"
-        ALLOW_SHELL_OPERATORS: "true"
+        EVERYTHING_SDK_PATH: "C:\Users\<username>\Documents\GitHub\Fixr\Everything64.dll"
