Restructured with UI
Missing:
RAG
Tool calling
Terminal execution
Closing/minimizing does not work

--- a/mcp_agent.secrets.yaml
+++ b/mcp_agent.secrets.yaml
@@ -5,8 +5,7 @@ anthropic:
   api_key: 
 
 openai:
-  api_key:
-
+  api_key: 
 ollama:
   model: llama3.2
 
@@ -14,4 +13,4 @@ mcp:
   servers:
     everything-search:
       env:
-        EVERYTHING_SDK_PATH: "C:\Users\<username>\Documents\GitHub\Fixr\Everything64.dll"
+        EVERYTHING_SDK_PATH: "./Everything64.dll"
