--- a/doesNotWork/project/package.json
+++ b/doesNotWork/project/package.json
@@ -7,7 +7,7 @@
     "install-all": "cd frontend && npm install && cd ../desktop && npm install",
     "dev": "cd frontend && npm run dev",
     "dev-desktop": "cd desktop && npm run dev-desktop",
-    "build": "cd frontend && npm run build",
+    "build": "cd ../frontend && npm run build && cd ../desktop && node copy-dist.js",
     "build-desktop": "cd desktop && npm run build-desktop",
     "start-backend": "cd backend && python server.py",
     "electron": "cd desktop && npm run electron",
