Commited server and dist files

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,14 @@
 fastagent.secrets.yaml
 
 # Python
+__pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+
 develop-eggs/
+
 downloads/
 eggs/
 .eggs/
